# bigspy

./: .gitattributes  .gitignore  LICENSE  PLAN.md  PLAN_JAX.md  README.md  pyproject.toml
example/: bigspy_demo.ipynb  bigspy_demo_jax.ipynb  bigspy_manga_demo.ipynb  run_bigspy.py  run_bigspy_jax.py
out_manga_demo/: mcmc_dpl_result.fits  posterior_dpl.npy  specfit_result.fits
out_manga_demo/chains_dpl/chains/: equal_weighted_post.txt  run.txt  weighted_post.txt  weighted_post_untransformed.txt
out_manga_demo/chains_dpl/extra/: sampling-stuck-it%d.csv  sampling-stuck-it%d.npz
out_manga_demo/chains_dpl/info/: post_summary.csv  results.json
out_manga_demo/chains_dpl/results/: points.hdf5
out_manga_demo/chains_manga-9195/chains/: equal_weighted_post.txt  run.txt  weighted_post.txt  weighted_post_untransformed.txt
out_manga_demo/chains_manga-9195/info/: post_summary.csv  results.json
out_manga_demo/chains_manga-9195/results/: points.hdf5
src/bigspy/: __init__.py  constants.py  io.py  mask.py  specfit.py  utils.py
src/bigspy/mcmc/: __init__.py  csp.py  dust.py  fitter.py  kinematics.py  likelihood.py  likelihood_jax.py  priors.py  sampler.py  sfh.py  ssp.py
template/: BC03_Padova1994_chab_PCA_extend_new.fits  SSP_BC03_Padova1994_chab.fits
tests/: benchmark_jax.py  conftest.py  drpall-v3_1_1.fits  manga-7443-12703-28-28.pkl  manga-8131-6102-28-28.pkl  test_end2end.py  test_mcmc.py  test_specfit.py
