[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bigspy"
version = "0.1.0"
description = "Bayesian Inference of Galaxy Spectra — Python library for spectral fitting of galaxy spectra"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "bigspy contributors"}
]
keywords = ["astronomy", "spectroscopy", "galaxy", "MCMC", "stellar-population"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "astropy>=5.0",
    "lmfit>=1.0",
    "ultranest>=3.6",
    "matplotlib>=3.5",
    "corner>=2.2",
    "jax>=0.4",
    "jaxlib>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]
